# pt2

./: CMakeLists.txt  README.md  build.sh  compile_commands.json  cppcheck.sh  test.sh
.circleci/: .config.yml  config.yml
src/: main.c
src/lib/: CMakeLists.txt  code_error.c  code_error.h  parallel.c  parallel.h  sequential.c  sequential.h  utils.c  utils.h
src/test/: test_realisation.cpp  test_realisation.h  test_utils.cpp  test_utils.h
src/test/files/: test_1.txt
